# lua-opencv

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.bat  build.sh  lua-opencv-dev-1.rockspec  package-lock.json  package.json  project.sublime-project  wsl_prepublish.sh
benchmark/: benchmark-results.xlsm  benchmark.js  benchmark.vbs
cmake/: FindLua.cmake  FindPatch.cmake  RequireOpenCV.cmake  UsePython3Venv.cmake  cmake_path_manipulation.cmake  cmake_uninstall.cmake.in  list_commands.cmake  set_startup_project.cmake  version.cmake
cmake/Modules/: FindLua.cmake
cmake/cuda/Modules/: FindCUDA.cmake
cmake/lua/: version.cmake
cmake/lua/Modules/: FindLua.cmake
docs/: docs.md  hosting-you-own-binary-rocks-Linux.md  hosting-you-own-binary-rocks-Windows.md
eigen/: eigen.cmake
generator/: CoClass.js  DeclProcessor.js  FileUtils.js  LuaGenerator.js  alias.js  arrays.js  constants.js  func_kwargs.js  ids.json  index.js  vectors.js
generator/declarations/: GpuMat.js  Mat.js  Matx.js  Point.js  RNG.js  Range.js  Rect.js  Scalar.js  Size.js  UMat.js  Vec.js  chrono.js  cv.js  shadow_gapi.js
lua/: CMakeLists.txt  lua.manifest  lua_exe.rc  lua_ver_rc.h
lua/cmake/: initialize.cmake  pkgconfig.cmake
lua/patches/: 001-lua-5.1-src.patch  001-lua-5.2-src.patch  001-lua-5.3-src.patch  001-lua-5.4-src.patch
luajit/: CMakeLists.txt  build.bat  luajit.manifest  luajit_exe.rc  luajit_ver_rc.h
luajit/buildvm/: CMakeLists.txt  buildvm.cmake
luajit/cmake/: common.cmake  initialize.cmake  options.cmake  pkgconfig.cmake  standalone.cmake
luajit/minilua/: CMakeLists.txt  minilua.cmake
luajit/patches/: 001-luajit-src.patch
luajit/testarch/: testarch.c  testarch.cmake
luarocks/: .gitignore  CMakeLists.txt  lua-opencv-dev-1.rockspec  lua.bat.in  luarocks-init.cmake  luarocks.bat.in  opencv_lua-scm-1.rockspec
luarocks/patches/: 001-luarocks-src.patch
luarocks/src/luarocks/admin/: index.lua
opencv/: CMakeLists.txt  OpenCVConfig.cmake  enable_wide_char.h  opencv_world.user.props
opencv_lua/: CMakeLists.txt  Config.cmake.in  OpenCVLuaConfig.cmake.in  PostInstall.cmake  auditwheel_repair.cmake  audiwheel_repair.cmake  export_targets_repair.cmake  pyproject.toml  set_rpath.py.in  setup.py.in  version.cmake
patches/: 001-eigen-src.patch  001-opencv-src.patch  001-opencv_contrib-src.patch  patch_auditwheel_whitelist.py
samples/: .gitignore  01-show-image.lua  02-video-capture-camera.lua  03-video-capture-file.lua  04-rotate-image.lua  05-drawing-contours.lua  06-template-matching.lua  07-find-template.lua  init.lua  samples-scm-1.rockspec
samples/dnn/object_detection/: common.lua  download_model.ps1  download_model.sh  models.yml  object_detection.lua  object_detection.py
samples/lua/: coherence.lua  common.lua  digits.lua  kalman.lua  perf.lua  perf.py
samples/lua/tutorial_code/Histograms_Matching/back_projection/: calcBackProject_Demo1.lua  calcBackProject_Demo2.lua
samples/lua/tutorial_code/Histograms_Matching/histogram_calculation/: calcHist_Demo.lua
samples/lua/tutorial_code/Histograms_Matching/histogram_comparison/: compareHist_Demo.lua
samples/lua/tutorial_code/Histograms_Matching/histogram_equalization/: EqualizeHist_Demo.lua
samples/lua/tutorial_code/ImgTrans/Filter2D/: filter2D.lua
samples/lua/tutorial_code/ImgTrans/HoughCircle/: hough_circle.lua
samples/lua/tutorial_code/ImgTrans/HoughLine/: hough_lines.lua
samples/lua/tutorial_code/ImgTrans/LaPlace/: laplace_demo.lua
samples/lua/tutorial_code/ImgTrans/MakeBorder/: copy_make_border.lua
samples/lua/tutorial_code/ImgTrans/SobelDemo/: sobel_demo.lua
samples/lua/tutorial_code/ImgTrans/canny_detector/: CannyDetector_Demo.lua
samples/lua/tutorial_code/ImgTrans/distance_transformation/: imageSegmentation.lua
samples/lua/tutorial_code/ImgTrans/remap/: Remap_Demo.lua
samples/lua/tutorial_code/ImgTrans/warp_affine/: Geometric_Transforms_Demo.lua
samples/lua/tutorial_code/ShapeDescriptors/bounding_rects_circles/: generalContours_demo1.lua
samples/lua/tutorial_code/ShapeDescriptors/bounding_rotated_ellipses/: generalContours_demo2.lua
samples/lua/tutorial_code/ShapeDescriptors/find_contours/: findContours_demo.lua
samples/lua/tutorial_code/ShapeDescriptors/hull/: hull_demo.lua
samples/lua/tutorial_code/ShapeDescriptors/moments/: moments_demo.lua
samples/lua/tutorial_code/ShapeDescriptors/point_polygon_test/: pointPolygonTest_demo.lua
samples/lua/tutorial_code/TrackingMotion/corner_subpixels/: cornerSubPix_Demo.lua
samples/lua/tutorial_code/TrackingMotion/generic_corner_detector/: cornerDetector_Demo.lua
samples/lua/tutorial_code/TrackingMotion/good_features_to_track/: goodFeaturesToTrack_Demo.lua
samples/lua/tutorial_code/TrackingMotion/harris_detector/: cornerHarris_Demo.lua
samples/lua/tutorial_code/core/AddingImages/: adding_images.lua
samples/lua/tutorial_code/core/discrete_fourier_transform/: discrete_fourier_transform.lua
samples/lua/tutorial_code/imgcodecs/: animations.lua
samples/lua/tutorial_code/videoio/: video-input-psnr-ssim.lua
scripts/: arrays.js  func_kwargs.js  manual.sh  new_version.lua  pack.js  prepublish.js  tasks.sh  test.js  vcvars_restore_end.sh  vcvars_restore_start.sh  version.js  wsl_init.sh  wsl_prepublish.sh
src/: Keywords.cpp  bit.cpp  file_utils.cpp  lua_bridge.cpp  lua_bridge_arrays.cpp  lua_bridge_common.cpp  lua_extensions.cpp  lua_utils_extension.cpp  luadef.cpp  my_object.cpp  registration.cpp
src/contrib/: cv_extra.cpp  cv_extra.h  highgui_extra.cpp  highgui_extra.h  imgproc_extra.cpp  mat_extra.cpp  mat_extra.h  util_extra.cpp  util_extra.h
src/include/: Keywords.hpp  NamedParameters.hpp  bit.hpp  file_utils.hpp  lua_bridge.hdr.hpp  lua_bridge.hpp  lua_bridge_arrays.hdr.hpp  lua_bridge_arrays.hpp  lua_bridge_common.hdr.hpp  lua_bridge_common.hpp  lua_extensions.hpp  lua_utils.hpp  lua_utils_arrays.hpp  lua_utils_extension.hpp  lua_utils_variant.hpp  luadef.hpp  registration.hpp
src/include/my_object/: my_object.hpp
test/: CMakeLists.txt  require_from_dll.cpp  test.cpp  test.lua
(+31 files in other folders)
